@@ -1,3 +1,8 @@
+2012-09-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/fs/affs.c (grub_affs_mount): Support AFFS bootblock in
+	sector 1.
+
 2012-09-24  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-install.in: Make the error message if $source_dir
